<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.studikasus1.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/judul1"
        android:textAlignment="center"
        android:textSize="40sp"
        android:id="@+id/judul1" />

    <TextView
        android:id="@+id/judul2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_below="@+id/judul1"
        android:layout_centerHorizontal="true"
        android:text="@string/judul2"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/menuMakanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/judul2"
        android:layout_gravity="center"
        android:layout_marginTop="55dp"
        android:hint="@string/menu_makanan"
        android:padding="16dp"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/jumlah_porsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menuMakanan"
        android:layout_gravity="center"
        android:hint="@string/jumlah_porsi"
        android:padding="16dp"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/eatbus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/jumlah_porsi"
            android:layout_marginBottom="3dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorAccent"
            android:onClick="eatbus"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/button_eatbus"
            android:textColor="@android:color/background_light"
            android:textColorLink="@color/colorAccent"
            android:textSize="25sp" />

        <Button
            android:id="@+id/abnormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/button"
            android:layout_marginBottom="3dp"
            android:background="@color/colorAccent"
            android:onClick="abnormal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/button_abnormal"
            android:textColor="@android:color/background_light"
            android:textColorLink="@android:color/background_light"
            android:textSize="25sp" />
    </LinearLayout>

</LinearLayout>
